--- a/server/supernova/CMakeLists.txt
+++ b/server/supernova/CMakeLists.txt
@@ -124,28 +124,47 @@ else()
   endif()
 endif()
 
-if(APPLE OR MSYS)
-    find_package(Portaudio)
-    if(NOT PORTAUDIO_FOUND)
-        message(FATAL_ERROR "Portaudio missing")
-    endif()
-    target_compile_definitions(libsupernova PUBLIC PORTAUDIO_BACKEND ${PORTAUDIO_DEFINITIONS})
-    target_include_directories(libsupernova PUBLIC ${PORTAUDIO_INCLUDE_DIRS})
-    target_link_libraries(libsupernova ${PORTAUDIO_LIBRARIES})
-elseif (WIN32)
-    target_compile_definitions(libsupernova PUBLIC PORTAUDIO_BACKEND -DPORTAUDIO_BACKEND)
-    target_include_directories(libsupernova PUBLIC ${PORTAUDIO_INCLUDE_DIRS})
-    if(MSYS)
-        target_link_libraries(libsupernova ${PORTAUDIO_LIBRARIES})
+if(AUDIOAPI STREQUAL "default")
+    if(APPLE)
+        set(AUDIOAPI portaudio)
+    elseif(WIN32)
+        set(AUDIOAPI portaudio)
     else()
-        target_link_libraries(libsupernova portaudio)
-    endif()
-else()
+        set(AUDIOAPI jack)
+    endif(APPLE)
+endif()
+
+if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio)$")
+    message(FATAL_ERROR "Unrecognized audio API: ${AUDIOAPI}")
+endif()
+
+if(AUDIOAPI STREQUAL "coreaudio")
+    set(AUDIOAPI portaudio)
+    message(STATUS "supernova: coreaudio API not implemented, using ${AUDIOAPI} instead")
+endif()
+
+if(AUDIOAPI STREQUAL jack)
+    find_package(Jack REQUIRED)
+elseif(AUDIOAPI STREQUAL portaudio AND ((NOT WIN32) OR MSYS)) # MSYS like Apple
+    find_package(Portaudio REQUIRED)
+endif()
+message(STATUS "supernova audio API: ${AUDIOAPI}")
+
+if(AUDIOAPI STREQUAL jack)
     find_library(JACK NAMES jack)
-    if (JACK)
+    if(JACK)
         target_compile_definitions(libsupernova PUBLIC JACK_BACKEND)
         target_link_libraries(libsupernova ${JACK})
         target_include_directories(libsupernova PUBLIC ${JACK_INCLUDE_DIRS})
+    endif()
+elseif(AUDIOAPI STREQUAL portaudio)
+    target_include_directories(libsupernova PUBLIC ${PORTAUDIO_INCLUDE_DIRS})
+    if(WIN32)
+        target_compile_definitions(libsupernova PUBLIC PORTAUDIO_BACKEND -DPORTAUDIO_BACKEND)
+        target_link_libraries(libsupernova portaudio)
+    else()
+        target_compile_definitions(libsupernova PUBLIC PORTAUDIO_BACKEND ${PORTAUDIO_DEFINITIONS})
+        target_link_libraries(libsupernova ${PORTAUDIO_LIBRARIES})
     endif()
 endif()
 
