supernova - portaudio: Windows/Linux: list/use APIs in device names
Match scsynth's device selection logic
Use device's sample rate by default

--- a/server/supernova/CMakeLists.txt
+++ b/server/supernova/CMakeLists.txt
@@ -158,6 +158,7 @@ if(AUDIOAPI STREQUAL jack)
         target_include_directories(libsupernova PUBLIC ${JACK_INCLUDE_DIRS})
     endif()
 elseif(AUDIOAPI STREQUAL portaudio)
+    target_sources(libsupernova PUBLIC ${CMAKE_SOURCE_DIR}/common/SC_PaUtils.cpp)
     target_include_directories(libsupernova PUBLIC ${PORTAUDIO_INCLUDE_DIRS})
     if(WIN32)
         target_compile_definitions(libsupernova PUBLIC PORTAUDIO_BACKEND -DPORTAUDIO_BACKEND)
