Added support for Bela
Co-authored-by: elgiano <elgiano@gmail.com>
Co-authored-by: sensestage <nescivi@gmail.com>
Co-authored-by: Dan Stowell <danstowell@users.sourceforge.net>
Co-authored-by: Andrew McPherson <a.mcpherson@qmul.ac.uk>
Co-authored-by: brianlheim <self@brianlheim.com>

--- a/server/supernova/CMakeLists.txt
+++ b/server/supernova/CMakeLists.txt
@@ -137,6 +137,8 @@ if(AUDIOAPI STREQUAL "default")
     else()
         set(AUDIOAPI jack)
     endif(APPLE)
+elseif(AUDIOAPI STREQUAL bela)
+    message(FATAL_ERROR "supernova is not supported on Bela")
 endif()
 
 if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio)$")
