cmake: Better help for users new to submodules.
For those who have just cloned or forked this repo, and not
updated submodules, there is already a really helpful
message printed as soon as they run cmake, with the command
needed to clone submodules.

This commit extends that, to also point to the wealth
of extra tips at:
https://github.com/supercollider/supercollider/wiki/git-cheat-sheet#working-with-submodules

--- a/external_libraries/CMakeLists.txt
+++ b/external_libraries/CMakeLists.txt
@@ -1,5 +1,9 @@
 if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/nova-simd/vec.hpp)
-    message(FATAL_ERROR "It appears you haven't cloned this project's git submodules: please run `git submodule update --init --recursive` from the root level of the repository")
+    message(FATAL_ERROR "It appears you haven't cloned this project's git submodules:"
+			" please run `git submodule update --init --recursive` from the root level of the repository.\n"
+			"For advice on setting up submodules, and also on keeping them updated over time, please see"
+			" this wiki page, and consider saving this link:"
+			" https://github.com/supercollider/supercollider/wiki/git-cheat-sheet#working-with-submodules")
 endif()
 
 if(NOT SYSTEM_BOOST) # we compile boost ourselves
