--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -130,13 +130,15 @@ after_build:
     If ($env:APPVEYOR_REPO_NAME -eq "supercollider/supercollider") {
         echo "Pushing artifact to S3"
         aws s3 cp --region us-west-2 --recursive --include "*" $env:APPVEYOR_BUILD_FOLDER/artifacts/ s3://supercollider/$env:S3_BUILDS_LOCATION
+        echo "S3 Build Location = $env:S3_URL"
     }
 # XXX ^^^ TEMPORARY WORKAROUND DUE TO APPVEYOR ARTIFACT STORAGE LIMIT
 
-after_deploy:
-- ps: echo "S3 Build Location = $env:S3_URL"
 
 # XXX vvv TEMPORARILY DISABLED DUE TO APPVEYOR ARTIFACT STORAGE LIMIT
+#after_deploy:
+#- ps: echo "S3 Build Location = $env:S3_URL"
+#
 #artifacts:
 #    - path: artifacts
 #      name: art_folder
