supernova/cmake: fix build issues with clang and Xcode
clang 4-6 needs to be linked to libatomic manually

use libc++ with clang

add config option for using libstdc++

remove dead cmake code

--- a/server/supernova/CMakeLists.txt
+++ b/server/supernova/CMakeLists.txt
@@ -86,6 +86,10 @@ endif()
 set_property(TARGET libsupernova PROPERTY CXX_STANDARD 14)
 
 
+if(CMAKE_COMPILER_IS_CLANG AND CMAKE_CXX_COMPILER_VERSION MATCHES "^[456]\\.")
+    message(STATUS "clang version is 4, 5, or 6, linking to libatomic")
+    target_link_libraries(libsupernova atomic)
+endif()
 if(NOT WIN32)
   set_property(TARGET libsupernova
                PROPERTY OUTPUT_NAME supernova)
