--- a/.travis.yml
+++ b/.travis.yml
@@ -3,25 +3,278 @@ language: cpp
 matrix:
   fast_finish: true
   include:
+    # Summary:
+    #
+    # Linux jobs: gcc {6, 7, 8, 9, 10, 9-shared-libscsynth, 9-minus-gui-and-lint, [9-using-syslibs]}
+    #    clang {4, 5, 6, 7, 8, 9, 10}
+    # gcc 6, clang 4 are on xenial, all others on bionic
+    #
+    # macOS jobs: xcode 10.3, xcode 11.3, xcode 11.3-using-syslibs, xcode 11.3-shared-libscsynth
+    # both on Mojave 10.14
+    #
+    # macOS is deployed from the plain xcode 11.3 job
+
+    # Ubuntu 16.04 gcc6
     - os: linux
-      sudo: required
-      dist: trusty
+      dist: xenial
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
       env:
-          - QT=true
-          - DO_LINT=false
-      group: edge
+        - JOB_NAME="xenial gcc6"
+        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 gcc7
     - os: linux
-      sudo: required
-      dist: trusty
+      dist: bionic
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
       env:
-          - QT=false
-          - DO_LINT=true # only lint on fastest build
-      group: edge
+        - JOB_NAME="bionic gcc7"
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 gcc8
+    - os: linux
+      dist: bionic
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-8
+      env:
+        - JOB_NAME="bionic gcc8"
+        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 gcc9
+    - os: linux
+      dist: bionic
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-9
+      env:
+        - JOB_NAME="bionic gcc9"
+        - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 gcc10
+    - os: linux
+      dist: bionic
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-10
+      env:
+        - JOB_NAME="bionic gcc10"
+        - MATRIX_EVAL="CC=gcc-10 && CXX=g++-10"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 gcc9 shared libscsynth (LIBSCSYNTH=ON)
+    - os: linux
+      dist: bionic
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-9
+      env:
+        - JOB_NAME="bionic gcc9 with libscsynth"
+        - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=true
+
+    # Ubuntu 18.04 gcc9 no QT (linting)
+    - os: linux
+      dist: bionic
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-9
+      env:
+        - JOB_NAME="bionic gcc9 no Qt with linting"
+        - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9"
+        - QT=false
+        - DO_LINT=true
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 gcc9 use syslibs
+    # This is disabled because Ubuntu 18.04 doesn't have an up to date version
+    # of Boost easily available.
+    #- os: linux
+    #  dist: bionic
+    #  addons:
+    #    apt:
+    #      sources:
+    #        - ubuntu-toolchain-r-test
+    #      packages:
+    #        - g++-9
+    #  env:
+    #    - JOB_NAME="bionic gcc9 no Qt with linting"
+    #    - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9"
+    #    - QT=true
+    #    - DO_LINT=false
+    #    - USE_SYSLIBS=true
+
+    # Ubuntu 16.04 clang4 (no ableton)
+    - os: linux
+      dist: xenial
+      env:
+        - JOB_NAME="xenial clang4.0"
+        - CLANG_VERSION=4.0
+        - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 clang5
+    - os: linux
+      dist: bionic
+      env:
+        - JOB_NAME="bionic clang5.0"
+        - CLANG_VERSION=5.0
+        - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 clang6
+    - os: linux
+      dist: bionic
+      env:
+        - JOB_NAME="bionic clang6.0"
+        - CLANG_VERSION=6.0
+        - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 clang7
+    - os: linux
+      dist: bionic
+      env:
+        - JOB_NAME="bionic clang7"
+        - CLANG_VERSION=7
+        - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 clang8
+    - os: linux
+      dist: bionic
+      env:
+        - JOB_NAME="bionic clang8"
+        - CLANG_VERSION=8
+        - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 clang9
+    - os: linux
+      dist: bionic
+      env:
+        - JOB_NAME="bionic clang9"
+        - CLANG_VERSION=9
+        - MATRIX_EVAL="CC=clang-9 && CXX=clang++-9"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # Ubuntu 18.04 clang10
+    - os: linux
+      dist: bionic
+      env:
+        - JOB_NAME="bionic clang10"
+        - CLANG_VERSION=10
+        - MATRIX_EVAL="CC=clang-10 && CXX=clang++-10"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # macOS 10.14 xcode10
     - os: osx
-      osx_image: xcode9.4
+      osx_image: xcode10.3
       env:
-          - QT=true
-          - DO_LINT=false
+        - JOB_NAME="macos xcode10.3"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+
+    # macOS 10.14 xcode11
+    - os: osx
+      osx_image: xcode11.3
+      env:
+        - JOB_NAME="macos xcode11.3"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=false
+        - DO_DEPLOY=YES # presence option
+
+    # macOS 10.14 xcode11 use_syslibs
+    - os: osx
+      osx_image: xcode11.3
+      env:
+        - JOB_NAME="macos xcode11.3 with syslibs"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=true
+        - SHARED_LIBSCSYNTH=false
+
+    # macOS 10.14 xcode11 shared_scsynth (LIBSCSYNTH)
+    - os: osx
+      osx_image: xcode11.3
+      env:
+        - JOB_NAME="macos xcode11.3 with shared libscsynth"
+        - QT=true
+        - DO_LINT=false
+        - USE_SYSLIBS=false
+        - SHARED_LIBSCSYNTH=true
 
 # use ccache to speed up build times. on osx,
 # we install it during the the before_install step
@@ -33,6 +286,8 @@ cache:
    - ../downloads
 
 before_install:
+ - eval "$MATRIX_EVAL"
+ - echo "JOB NAME - $JOB_NAME"
  - $TRAVIS_BUILD_DIR/.travis/before-install-$TRAVIS_OS_NAME.sh --qt=$QT
 
 before_script:
@@ -47,7 +302,11 @@ before_script:
 script:
  - $TRAVIS_BUILD_DIR/.travis/script-$TRAVIS_OS_NAME.sh
  - $TRAVIS_BUILD_DIR/.travis/test.sh
- - if [[ $TRAVIS_OS_NAME == osx ]]; then $TRAVIS_BUILD_DIR/.travis/package-osx.sh; fi
+# only on osx for now
+ - echo $DO_DEPLOY
+ - if [[ ! -z "$DO_DEPLOY" ]]; then echo hi; fi
+ - if [[ -z "$DO_DEPLOY" ]]; then echo hi; fi
+ - if [[ ! -z "$DO_DEPLOY" ]]; then $TRAVIS_BUILD_DIR/.travis/package-$TRAVIS_OS_NAME.sh; fi
 
 before_deploy:
  # required for github releases
@@ -74,7 +333,7 @@ deploy:
    endpoint: s3-us-west-2.amazonaws.com
    acl: public_read
    on:
-     condition: $TRAVIS_OS_NAME = osx && ! -z $AWS_KEY && ! -z $AWS_SECRET
+     condition: $TRAVIS_OS_NAME = osx && ! -z $AWS_KEY && ! -z $AWS_SECRET && ! -z $DO_DEPLOY
      all_branches: true
  # github releases - only tags
  - provider: releases
@@ -83,7 +342,7 @@ deploy:
    prerelease: true
    skip_cleanup: true
    on:
-     condition: $TRAVIS_OS_NAME = osx && ! -z $GITHUB_KEY
+     condition: $TRAVIS_OS_NAME = osx && ! -z $GITHUB_KEY && ! -z $DO_DEPLOY
      tags: true
      all_branches: true
 
