--- a/server/scsynth/CMakeLists.txt
+++ b/server/scsynth/CMakeLists.txt
@@ -190,7 +190,7 @@ if (AUDIOAPI STREQUAL jack)
 	target_link_libraries(libscsynth ${JACK_LIBRARIES})
 elseif(AUDIOAPI STREQUAL portaudio)
 	if(WIN32 AND NOT MSYS)
-		target_link_libraries(libscsynth portaudio)
+		target_link_libraries(libscsynth portaudio_static)
 	else()
 		target_link_libraries(libscsynth ${PORTAUDIO_LIBRARIES})
 	endif()
