--- a/server/supernova/CMakeLists.txt
+++ b/server/supernova/CMakeLists.txt
@@ -162,7 +162,7 @@ elseif(AUDIOAPI STREQUAL portaudio)
     target_include_directories(libsupernova PUBLIC ${PORTAUDIO_INCLUDE_DIRS})
     if(WIN32)
         target_compile_definitions(libsupernova PUBLIC PORTAUDIO_BACKEND -DPORTAUDIO_BACKEND)
-        target_link_libraries(libsupernova portaudio)
+        target_link_libraries(libsupernova portaudio_static)
     else()
         target_compile_definitions(libsupernova PUBLIC PORTAUDIO_BACKEND ${PORTAUDIO_DEFINITIONS})
         target_link_libraries(libsupernova ${PORTAUDIO_LIBRARIES})
