--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -138,15 +138,15 @@ after_build:
 
 
 # XXX vvv TEMPORARILY DISABLED DUE TO APPVEYOR ARTIFACT STORAGE LIMIT
-#after_deploy:
-#- ps: echo "S3 Build Location = $env:S3_URL"
-#
-#artifacts:
-#    - path: artifacts
-#      name: art_folder
-#    - path: build\Install\*.exe
-#      name: installer
-#      type: File
+after_deploy:
+- ps: echo "S3 Build Location = $env:S3_URL"
+
+artifacts:
+   - path: artifacts
+     name: art_folder
+   - path: build\Install\*.exe
+     name: installer
+     type: File
 #
 #deploy:
 ## s3 upload - every commit
