--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -128,9 +128,11 @@ after_build:
 # XXX vvv TEMPORARY WORKAROUND DUE TO APPVEYOR ARTIFACT STORAGE LIMIT
 - ps: >-
     If ($env:APPVEYOR_REPO_NAME -eq "supercollider/supercollider") {
-        echo "Pushing artifact to S3"
-        aws s3 cp --region us-west-2 --acl public-read --recursive --include "*" $env:APPVEYOR_BUILD_FOLDER/artifacts/ s3://supercollider/$env:S3_BUILDS_LOCATION
-        echo "S3 Build Location = $env:S3_URL"
+        If ([string]::IsNullOrEmpty($env:APPVEYOR_PULL_REQUEST_NUMBER)) {
+            echo "Pushing artifact to S3"
+            aws s3 cp --region us-west-2 --acl public-read --recursive --include "*" $env:APPVEYOR_BUILD_FOLDER/artifacts/ s3://supercollider/$env:S3_BUILDS_LOCATION
+            echo "S3 Build Location = $env:S3_URL"
+        }
     }
 # XXX ^^^ TEMPORARY WORKAROUND DUE TO APPVEYOR ARTIFACT STORAGE LIMIT
 
