--- a/external_libraries/portaudio/CMakeLists.txt
+++ b/external_libraries/portaudio/CMakeLists.txt
@@ -15,8 +15,8 @@ set(PA_DISABLE_INSTALL ON CACHE BOOL "Disable PortAudio install" FORCE)
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/portaudio_library")
 
-if(WIN32)
-    message(STATUS "PortAudio support for ASIO: ${PA_USE_ASIO}")
+if(WIN32 AND NOT PA_USE_ASIO)
+    message(STATUS "Building Portaudio without support for ASIO")
 endif()
 
 # when building PA ourselves, we need to specify PORTAUDIO_INCLUDE_DIRS and PORTAUDIO_LIBRARIES
