Update CMakeLists.tx. and CMakeLists.txt

--- a/external_libraries/CMakeLists.txt
+++ b/external_libraries/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 
 if(NOT SYSTEM_PORTAUDIO)
     message(STATUS "PortAudio: building static library")
-    add_subdirectory("${CMAKE_SOURCE_DIR}/external_libraries/portaudio")
+    add_subdirectory(portaudio)
 endif()
 
 if(NOT SYSTEM_BOOST) # we compile boost ourselves
