scdoc: update lexer cpp file to avoid register keyword
removed in C++17

--- a/SCDoc/CMakeLists.txt
+++ b/SCDoc/CMakeLists.txt
@@ -12,7 +12,7 @@ set(SCDOC_SRCS
 if(CMAKE_COMPILER_IS_CLANG)
   set_source_files_properties(
     ${SCDOC_DIR}/lex.scdoc.cpp
-    PROPERTIES COMPILE_FLAGS "-Wno-deprecated-register -Wno-null-conversion")
+    PROPERTIES COMPILE_FLAGS "-Wno-null-conversion")
 endif()
 
 include_directories(
