--- a/external_libraries/CMakeLists.txt
+++ b/external_libraries/CMakeLists.txt
@@ -20,6 +20,8 @@ if(NOT SYSTEM_BOOST) # we compile boost ourselves
 		aux_source_directory(boost/libs/thread/src/win32/ boost_thread_platform )
 	elseif(PTHREADS_FOUND)
 		aux_source_directory(boost/libs/thread/src/pthread/ boost_thread_platform )
+	elseif(EMSCRIPTEN)
+		message(WARNING "Currently unclear how to use pthreads on emscripten")
 	else()
 		message(SEND_ERROR "we need to implement boost_thread")
 	endif()
