--- a/server/scsynth/CMakeLists.txt
+++ b/server/scsynth/CMakeLists.txt
@@ -28,12 +28,14 @@ if(AUDIOAPI STREQUAL "default")
 		set(AUDIOAPI coreaudio)
 	elseif(WIN32)
 		set(AUDIOAPI portaudio)
+	elseif(EMSCRIPTEN)
+		set(AUDIOAPI openal)
 	else()
 		set(AUDIOAPI jack)
 	endif(APPLE)
 endif()
 
-if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio)$")
+if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|openal)$")
 	message(FATAL_ERROR "Unrecognised audio API: ${AUDIOAPI}")
 endif()
 
