step. add blank SC_WebAudio.cpp ; change 'openal' to 'webaudio'
- we have unstaged commits in `external_libraries/nova-tt`; thus
  next step will be to commit them in a fork of nova-tt

--- a/server/scsynth/CMakeLists.txt
+++ b/server/scsynth/CMakeLists.txt
@@ -29,13 +29,13 @@ if(AUDIOAPI STREQUAL "default")
 	elseif(WIN32)
 		set(AUDIOAPI portaudio)
 	elseif(EMSCRIPTEN)
-		set(AUDIOAPI openal)
+		set(AUDIOAPI webaudio)
 	else()
 		set(AUDIOAPI jack)
 	endif(APPLE)
 endif()
 
-if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|bela|openal)$")
+if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|bela|openal|webaudio)$")
 	message(FATAL_ERROR "Unrecognised audio API: ${AUDIOAPI}")
 endif()
 
@@ -61,6 +61,8 @@ elseif(AUDIOAPI STREQUAL bela)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${BELA_C_FLAGS}")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${BELA_CXX_FLAGS}")
     endif()
+elseif(AUDIOAPI STREQUAL webaudio AND NOT EMSCRIPTEN)
+	message(FATAL_ERROR "WebAudio selected as audio API, but not building with Emscripten")
 endif()
 message(STATUS "Audio API (scsynth): ${AUDIOAPI}")
 
@@ -145,6 +147,9 @@ elseif (AUDIOAPI STREQUAL bela)
     list(APPEND scsynth_sources SC_Bela.cpp)
     add_definitions("-DSC_AUDIO_API=SC_AUDIO_API_BELA" "-DSC_BELA" ${XENOMAI_DEFINITIONS} ${BELA_DEFINITIONS})
     include_directories(${XENOMAI_INCLUDE_DIRS} ${BELA_INCLUDE_DIRS})
+elseif (AUDIOAPI STREQUAL webaudio)
+	list(APPEND scsynth_sources SC_WebAudio.cpp)
+	add_definitions("-DSC_AUDIO_API=SC_AUDIO_API_WEBAUDIO")
 endif()
 
 set (FINAL_BUILD 0) # disable final build for scsynth
