--- a/server/scsynth/CMakeLists.txt
+++ b/server/scsynth/CMakeLists.txt
@@ -29,13 +29,13 @@ if(AUDIOAPI STREQUAL "default")
 	elseif(WIN32)
 		set(AUDIOAPI portaudio)
 	elseif(EMSCRIPTEN)
-		set(AUDIOAPI openal)
+		set(AUDIOAPI webaudio)
 	else()
 		set(AUDIOAPI jack)
 	endif(APPLE)
 endif()
 
-if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|openal)$")
+if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|webaudio)$")
 	message(FATAL_ERROR "Unrecognised audio API: ${AUDIOAPI}")
 endif()
 
@@ -49,6 +49,8 @@ elseif(AUDIOAPI STREQUAL portaudio AND SYSTEM_PORTAUDIO)
     if(NOT PORTAUDIO_FOUND)
       message(FATAL_ERROR "Portaudio selected as audio API, but development files not found")
     endif()
+elseif(AUDIOAPI STREQUAL webaudio AND NOT EMSCRIPTEN)
+	message(FATAL_ERROR "WebAudio selected as audio API, but not building with Emscripten")
 endif()
 message(STATUS "Audio API (scsynth): ${AUDIOAPI}")
 
@@ -126,6 +128,9 @@ elseif (AUDIOAPI STREQUAL portaudio)
 	list(APPEND scsynth_sources SC_PortAudio.cpp ${CMAKE_SOURCE_DIR}/common/SC_PaUtils.cpp)
 	add_definitions("-DSC_AUDIO_API=SC_AUDIO_API_PORTAUDIO" ${PORTAUDIO_DEFINITIONS})
 	include_directories(${PORTAUDIO_INCLUDE_DIRS})
+elseif (AUDIOAPI STREQUAL webaudio)
+	list(APPEND scsynth_sources SC_WebAudio.cpp)
+	add_definitions("-DSC_AUDIO_API=SC_AUDIO_API_WEBAUDIO")
 endif()
 
 set (FINAL_BUILD 0) # disable final build for scsynth
